syntax = "proto3";
option go_package = "pb/gen";
package ukama.subscriber.sim.v1;
import "validator.proto";

/*
Sim pool sub-system is responsible of:

    - Populating sims data in DB from CSV
    - Provide sim stats
    - Provide sim on request
    - Allows to add slice of sims
*/
service SimService {
    /// Get sim from pool
    rpc Get (GetRequest) returns (GetResponse) {}
    rpc GetByIccid (GetByIccidRequest) returns (GetByIccidResponse) {}
    ///Get sim pool statistaics
    rpc GetStats (GetStatsRequest) returns (GetStatsResponse) {}
    ///Add sims to pool
    rpc Add(AddRequest) returns (AddResponse){}
    ///Delete sims from pool
    rpc Delete(DeleteRequest) returns (DeleteResponse){}
    ///Batch upload sims from CSV
    rpc Upload(UploadRequest) returns (UploadResponse){}
}
message GetRequest{
    bool IsPhysicalSim=1 [json_name = "is_physical_sim"]; /// True/False
    string simType = 2 [json_name = "sim_type"]; /// SimType string enum
}
message GetResponse {
    Sim sim = 1; /// Sim object
}
message GetByIccidRequest{
    string iccid=1; /// Sim iccid string
}
message GetByIccidResponse {
    Sim sim = 1; /// Sim object
}
message GetStatsRequest{
    string simType = 1 [json_name = "sim_type"]; /// SimType string enum
}
message GetStatsResponse {
    uint64 total = 1; /// Total sims in sim pool
    uint64 available = 2; /// Available sims in sim pool
    uint64 consumed = 3; /// Consumed sims in sim pool
    uint64 failed = 4; /// Failed sims in sim pool
}
message AddRequest{
    repeated AddSim sim = 1; /// Slice of sims to add in sim pool
}
message AddResponse{
    repeated Sim sim = 1; /// Slice of sims added in sim pool
}
message DeleteRequest{
    repeated uint64 id = 1; /// Slice of sim id's to delete from sim pool
}
message DeleteResponse {
    repeated uint64 id = 1; /// Slice of sim id's deleted from sim pool
}
message UploadRequest{
    bytes simData = 1; /// Bytes of CSV file content
    string simType = 2 [json_name = "sim_type"]; /// SimType of sim
}
message UploadResponse {
    repeated string iccid = 1; /// Slice of sims id added in sim pool
}
message Sim{
    uint64 id = 1;
    string iccid = 2 [(validator.field) = { human_error:"must be a valid ICCID format", regex: "^[0-9]{19}$"}];
    string msisdn = 3 [(validator.field) = { human_error:"must be a phone number format", regex: "^$|^(?:(?:\\(?(?:00|\\+)([1-4]\\d\\d|[1-9]\\d?)\\)?)?[\\-\\.\\ \\\\\\/]?)?((?:\\(?\\d{1,}\\)?[\\-\\.\\ \\\\\\/]?){0,})(?:[\\-\\.\\ \\\\\\/]?(?:#|ext\\.?|extension|x)[\\-\\.\\ \\\\\\/]?(\\d+))?$"}]; 
    bool isAllocated = 4 [json_name = "is_allocated"];
    string simType = 5 [json_name = "sim_type"];
    string smDpAddress = 6 [json_name = "sm_ap_address"];
    string activationCode = 7 [json_name = "activation_code"];
    string createdAt= 8 [json_name = "created_at"];
    string deletedAt= 9 [json_name = "deleted_at"];
    string updatedAt= 10 [json_name = "updated_at"];
    bool isPhysical= 11 [json_name = "is_physical"];
    string qrCode= 12 [json_name = "qr_code"];
}
message AddSim{
    string iccid = 1 [(validator.field) = { human_error:"must be a valid ICCID format", regex: "^[0-9]{19}$"}];
    string simType = 2 [json_name = "sim_type"];
    string msisdn = 3 [(validator.field) = { human_error:"must be a phone number format", regex: "^$|^(?:(?:\\(?(?:00|\\+)([1-4]\\d\\d|[1-9]\\d?)\\)?)?[\\-\\.\\ \\\\\\/]?)?((?:\\(?\\d{1,}\\)?[\\-\\.\\ \\\\\\/]?){0,})(?:[\\-\\.\\ \\\\\\/]?(?:#|ext\\.?|extension|x)[\\-\\.\\ \\\\\\/]?(\\d+))?$"}];
    string smDpAddress = 4 [json_name = "sm_ap_address"];
    string activationCode = 5 [json_name = "activation_code"];
    string qrCode=6 [json_name = "qr_code"];
    bool isPhysical=7 [json_name = "is_physical"];
}
